kutrace ported from 4.19.19

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -32,6 +32,14 @@ config X86_64
 	select SWIOTLB
 	select ARCH_HAS_SYSCALL_WRAPPER
 
+# dsites 2019.02.17
+config KUTRACE
+       bool "kernel/user tracing, dsites"
+       depends on 64BIT
+       def_bool n
+       ---help---
+         Enables kernel/user tracing patches
+
 config FORCE_DYNAMIC_FTRACE
 	def_bool y
 	depends on X86_32
