--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -123,6 +123,8 @@ KCOV_INSTRUMENT_stackleak.o := n
 
 $(obj)/configs.o: $(obj)/config_data.gz
 
+obj-$(CONFIG_KUTRACE) += kutrace/
+
 targets += config_data.gz
 $(obj)/config_data.gz: $(KCONFIG_CONFIG) FORCE
 	$(call if_changed,gzip)
